@@ -1,2 +1,10 @@
 # java9-examples
-Sample code for several new Java 9 features
+
+## Install
+* java9-examples-flow: Sample code for Java 9 Flow API
+* java9-examples-interfaces: Sample code for Java 9 interfaces
+* java9-examples-jigsaw: Sample code for Java 9 modules
+* java9-examples-tests: Contains tests with examples for Java 9 features such as collections factory methods, the new HTTP client and the new Optional methods.
+Requires --add-modules jdk.incubator.httpclient to run
+
+Generate Javadocs using -html5 flag to test the new HTML5 output introduced in java 9
